fixed flag and coa sizing to prevent stretching

--- a/app/css/country.css
+++ b/app/css/country.css
@@ -55,18 +55,22 @@ body {
 
 .national-symbols-wrapper {
 	display: flex;
-	justify-content: space-evenly;
+	justify-content: space-around;
+	align-items: center;
+	flex-wrap: wrap;
 	width: 100%;
-	aspect-ratio: 16/5;
-	padding-block: 0.5em;
+	min-height: 100px;
+	padding-block: 0.25em;
 }
 
-.national-symbols-wrapper > img:first-of-type {
-	width: 35%;
+.national-symbols-wrapper > div:first-of-type {
+	height: 75px;
+	margin: 0.5em;
 }
 
-.national-symbols-wrapper > img:last-of-type {
-	width: 35%;
+.national-symbols-wrapper > div:last-of-type {
+	height: 75px;
+	margin: 0.5em;
 }
 
 .region-wrapper {
